# Parallel-Canopy-Algorithm

./: .gitignore  CMakeLists.txt  README.md  main.cpp  perallel_canopy_mpi
